@startuml
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle

interface Command <<interface>> {
    + execute(items: ItemList, ui: Ui): void
}

class HelpCommand {
    {static} - HELPSUMMARYMESSAGE: String = "Command names and their summaries:..."
    {static} - HELPADDITEMMESSAGE: String = "addItem:..."
    {static} - HELPDELETEITEMMESSAGE: String = "deleteItem:..."
    {static} - HELPEDITDESCRIPTIONMESSAGE: String = "editDescription:..."
    {static} - HELPEDITPRICEMESSAGE: String = "editPrice:..."
    {static} - HELPEDITQUANTITYMESSAGE: String = "editQuantity:..."
    {static} - HELPFINDITEMMESSAGE: String = "findItem:..."
    {static} - HELPFILTERITEMMESSAGE: String = "filterItem:..."
    {static} - HELPTRANSACTMESSAGE: String = "transact:..."
    {static} - HELPSHOWHISTORYMESSAGE: String = "showHistory:..."
    {static} - HELPLISTITEMSMESSAGE: String = "listItems:..."
    {static} - HELPHELPMESSAGE: String = "help:..."
    {static} - HELPEXITMESSAGE: String = "exit:..."
    {static} - COMMANDMESSAGES: Map<String, String>
    - input: String
    + HelpCommand(input: String)
    + execute(items: ItemList, ui: Ui): void
}

interface Validator <<interface>> {
    + validate(items: ItemList): void
}

class HelpCommandValidator {
    - input: String
    + HelpCommandValidator(input: String)
    + validate(items: ItemList): void
    - validateCommandSpecified(words: String[]): void
    - isValidCommand(word: String): boolean
}

class ItemList

class Ui {
    + showMessage(message: String): void
}

Command <|.. HelpCommand
Validator <|.. HelpCommandValidator

HelpCommand .right.> HelpCommandValidator : creates >
HelpCommand ..> Ui : uses >
HelpCommand ..> ItemList : uses >

HelpCommandValidator ..> ItemList : uses >

@enduml